--- a/pages/work/wearecoral.mdx
+++ b/pages/work/wearecoral.mdx
@@ -1,11 +1,6 @@
-import { MSButton, MSTitleBar } from "../../components";
-import {
-  PhotoIcon,
-  QuestionMarkCircleIcon
-} from "@heroicons/react/24/outline";
+import { MSButton } from "../../components";
 import PreviewImage from "../../components/markdown/PreviewImage";
 import { works } from "../../constants/works";
-import Info from "../../components/markdown/Info";
 import MarkdownLayout from "../../layouts/MarkdownLayout";
 
 export const metadata = {
@@ -17,29 +12,26 @@ export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
 
 Coral is an innovative crowdfunding platform dedicated to nurturing the musicians and scenes we love. Monthly pledges are dispersed among various musicians through user-led allocation models, creating meaningful impact not only for individual artists but also within the music communities we're passionate about.
 
-### What did I do?
-I designed and implemented the conversion pages. The experience was carefully crafted, so it takes the users on a journey from the surface to the thriving ecosystem of corals below. The pages were designed to be responsive, accessible, beautiful, and delightful to use.
-
-I've also made improvements to the onboarding flows, modal UIs, and overall platform experience.
-
-<section id="other-content" className="grid cols-1 @large:cols-3 gap-md mt-4xl">
-  <section>
-    <MSTitleBar clsssName="jc-center" icon={<QuestionMarkCircleIcon />}>Info</MSTitleBar>
-    <Info data={ WorkInfo }>
-      <MSButton link="https://www.wearecoral.org/" type="small filled">Website</MSButton>
-    </Info>
-  </section>
-  <section  className="start-1 end-1 @large:start-2 @large:end-4">
-    <MSTitleBar clsssName="jc-center" icon={<PhotoIcon />}>Media</MSTitleBar>
-    <div className="w-full grid cols-1 gap-md mt-md">
-      <PreviewImage src="/img/wearecoral/wearecoral-conversion.webp" alt="The wearecoral conversion page." />
-    </div>
-  </section>
-</section>
+I designed and implemented the conversion pages. The experience was carefully crafted, so it takes the users on a journey from the surface to the thriving ecosystem of corals below. The pages were designed to be responsive, accessible, beautiful, and delightful to use. I've also made improvements to the onboarding flows, modal UIs, and overall platform experience.
 
 export default function WorkPage({ children }) {
   return (
-    <MarkdownLayout data={ WorkInfo } metadata={ metadata } previewImage="wearecoral/wearecoral-conversion.webp" previewImageAlt="The wearecoral conversion page.">
+    <MarkdownLayout
+      data={ WorkInfo }
+      metadata={ metadata }
+      previewImage="wearecoral/wearecoral-conversion.webp"
+      previewImageAlt="The wearecoral conversion page."
+      media={(
+        <>
+          <PreviewImage src="/img/wearecoral/wearecoral-conversion.webp" alt="The wearecoral conversion page." />
+        </>
+      )}
+      links={(
+        <>
+          <MSButton link="https://www.wearecoral.org/" type="small outlined">Website</MSButton>
+        </>
+      )}
+    >
       { children }
     </MarkdownLayout>
   );
