--- a/pages/work/growstocks.mdx
+++ b/pages/work/growstocks.mdx
@@ -4,7 +4,7 @@ import MarkdownLayout from "../../layouts/MarkdownLayout";
 
 export const metadata = {
   title: 'GrowStocks',
-  description: 'The online price index and marketplace for Growtopia.',
+  description: 'Growtopia\'s Online Price Checker and tech solutions company.',
 }
 
 export const WorkInfo = works.filter(item => item.name === metadata.title)[0];
