--- a/pages/tools/hashi.mdx
+++ b/pages/tools/hashi.mdx
@@ -29,9 +29,9 @@ export default function ToolPage({ children }) {
       )}
       links={(
         <>
-          <MSButton link={ToolInfo.links['docs']} type="small outlined">Docs</MSButton>
-          <MSButton link={ToolInfo.links['figma']} type="small outlined">Figma</MSButton>
-          <MSButton link={ToolInfo.links['src']} type="small outlined">Source</MSButton>
+          <li><MSButton link={ ToolInfo.links['docs'] } type="small outlined">Docs</MSButton></li>
+          <li><MSButton link={ ToolInfo.links['figma'] } type="small outlined">Figma</MSButton></li>
+          <li><MSButton link={ ToolInfo.links['src'] } type="small outlined">Source</MSButton></li>
         </>
       )}
     >
