--- a/pages/work/dev-protocol.mdx
+++ b/pages/work/dev-protocol.mdx
@@ -40,8 +40,8 @@ export default function WorkPage({ children }) {
       )}
       links={(
         <>
-          <MSButton link="https://devprotocol.xyz" type="small outlined">Website</MSButton>
-          <MSButton link="https://github.com/dev-protocol" type="small outlined">GitHub</MSButton>
+          <li><MSButton link="https://devprotocol.xyz" type="small outlined">Website</MSButton></li>
+          <li><MSButton link="https://github.com/dev-protocol" type="small outlined">GitHub</MSButton></li>
         </>
       )}
     >
