--- a/pages/work/inm-audio.mdx
+++ b/pages/work/inm-audio.mdx
@@ -30,9 +30,9 @@ export default function WorkPage({ children }) {
       )}
       links={(
         <>
-          <MSButton link={ WorkInfo['link'] } type="small outlined">Website</MSButton>
-          <MSButton link="https://facebook.com/inmaudio" type="small outlined">Facebook</MSButton>
-          <MSButton link="https://instagram.com/inmaudio" type="small outlined">Instagram</MSButton>
+          <li><MSButton link={ WorkInfo['link'] } type="small outlined">Website</MSButton></li>
+          <li><MSButton link="https://facebook.com/inmaudio" type="small outlined">Facebook</MSButton></li>
+          <li><MSButton link="https://instagram.com/inmaudio" type="small outlined">Instagram</MSButton></li>
         </>
       )}
     >
