--- a/pages/work/luwal-sining-pagganap.mdx
+++ b/pages/work/luwal-sining-pagganap.mdx
@@ -18,7 +18,7 @@ export default function WorkPage({ children }) {
       previewImage="luwal.webp"
       previewImageAlt="The Luwal Sining-Pagganap website landing page."
       links={(
-        <p className="body">There are no links for this project.</p>
+        <li><p className="body">There are no links for this project.</p></li>
       )}
     >
       { children }
