--- a/pages/work/pycord.mdx
+++ b/pages/work/pycord.mdx
@@ -26,9 +26,9 @@ export default function WorkPage({ children }) {
       )}
       links={(
         <>
-          <MSButton link="https://pycord.dev" type="small outlined">Website</MSButton>
-          <MSButton link="https://guide.pycord.dev" type="small outlined">Guide</MSButton>
-          <MSButton link="https://github.com/Pycord-Development" type="small outlined">Github</MSButton>
+          <li><MSButton link="https://pycord.dev" type="small outlined">Website</MSButton></li>
+          <li><MSButton link="https://guide.pycord.dev" type="small outlined">Guide</MSButton></li>
+          <li><MSButton link="https://github.com/Pycord-Development" type="small outlined">Github</MSButton></li>
         </>
       )}
     >
