--- a/pages/work/wearecoral.mdx
+++ b/pages/work/wearecoral.mdx
@@ -28,7 +28,7 @@ export default function WorkPage({ children }) {
       )}
       links={(
         <>
-          <MSButton link="https://www.wearecoral.org/" type="small outlined">Website</MSButton>
+          <li><MSButton link="https://www.wearecoral.org/" type="small outlined">Website</MSButton></li>
         </>
       )}
     >
