--- a/pages/tools/sentro.mdx
+++ b/pages/tools/sentro.mdx
@@ -26,8 +26,8 @@ export default function ToolPage({ children }) {
       )}
       links={(
         <>
-          <MSButton link={ToolInfo.links['docs']} type="small filled">Docs</MSButton>
-          <MSButton link={ToolInfo.links['src']} type="small filled">Source</MSButton>
+          <li><MSButton link={ ToolInfo.links['docs'] } type="small filled">Docs</MSButton></li>
+          <li><MSButton link={ ToolInfo.links['src'] } type="small filled">Source</MSButton></li>
         </>
       )}
     >
