--- a/pages/work/blockcorp.mdx
+++ b/pages/work/blockcorp.mdx
@@ -18,7 +18,7 @@ export default function WorkPage({ children }) {
       previewImage="blockcorp.webp"
       previewImageAlt="Blockcorp's landing page."
       links={(
-        <p className="body">There are no links for this project.</p>
+        <li><p className="body">There are no links for this project.</p></li>
       )}
     >
       { children }
