--- a/pages/work/purple-cress.mdx
+++ b/pages/work/purple-cress.mdx
@@ -25,7 +25,7 @@ export default function WorkPage({ children }) {
         </>
       )}
       links={(
-        <p className="body">There are no links for this project.</p>
+        <li><p className="body">There are no links for this project.</p></li>
       )}
     >
       { children }
