--- a/pages/blog/the-goldilocks-zone.mdx
+++ b/pages/blog/the-goldilocks-zone.mdx
@@ -10,7 +10,7 @@ export const metadata = {
 
 I came across a [video](https://www.youtube.com/watch?v=DRmnkaWQp4o) recently talking about web design trends in 2025. It specifically caught my eye since I've been trying to do some experimentation on said trends in this very website you're reading from. Numerous revisions, trying to make everything sit right; I can truly say that this website revamp has been the toughest one yet.
 
-Throughout the revision, I've only ever asked myself one thing: How can I make it fun while maintaining usability and accessibility? I've seen dozens of websites that went for more bold and fun designs that 'wow' their visitors. Websites that use motion, bold typography, walls of text, etc., to prove a point and drive engagement are getting all the more prominent these days, especially with the rise of AI frontend code.
+Throughout the revision, I've only ever asked myself one thing: How can I make it fun while maintaining usability and accessibility? I've seen dozens of websites that went for more bold and fun designs that 'wow' their visitors. Websites that use motion, bold typography, walls of text, etc., to prove a point and drive engagement are getting all the more prominent these days.
 
 There's one particular section that resonated with me. The OP talked about imperfection and how designers embrace it to give the website a more human touch rather than just a result of prompting. Imperfect styles, imperfect layout, typically something you'd find by ignoring rules and conventions. I've quickly found out that you can't just throw everything at the wall and hope that something sticks. Web design in and of itself isn't just a science, but also an art form. And just like any other art form, everything is done with care and intention.
 
